fixed for ipad and fixed some padding

--- a/html-1/dreams.html
+++ b/html-1/dreams.html
@@ -20,7 +20,7 @@
           $(document).scroll(function() {
             scroll_start = $(this).scrollTop();
             var width = $(window).width();
-            if (scroll_start > offset.top && (width > 768)) {
+            if (scroll_start > offset.top && (width >= 768)) {
               $(".fixed-nav-bar").css('background-color', 'rgba(0, 0, 0, 0.6)');
               var width = $(window).width();
               var height = $(window).height();
@@ -55,8 +55,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div style="    margin-right: 46px;
-    margin-top: 36px;" class="collapse navbar-collapse " id="navbarSupportedContent">
+    <div  style="" class="collapse navbar-collapse navbarPadding" id="navbarSupportedContent">
       <div id="asd">
         <ul class="navbar-nav navbar-dark ml-auto " id="header">
           <li class="nav-item active">
@@ -232,7 +231,7 @@
             <div class="timeline">
               <div class="row no-gutters justify-content-end justify-content-md-around align-items-start timeline-nodes">
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-                  <h3 class=" ">July 2010 Our Humble Beginnings </h3>
+                  <h3 class=" ">July 2010 <br/>Our Humble Beginnings </h3>
                   <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -243,7 +242,7 @@
               </div>
               <div class="row no-gutters justify-content-end justify-content-md-around align-items-start timeline-nodes">
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-                  <h3 class="">January 2011 Facing Startup Battles </h3>
+                  <h3 class="">January 2011<br/> Facing Startup Battles </h3>
                   <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -254,7 +253,7 @@
               </div>
               <div class="row no-gutters justify-content-end justify-content-md-around align-items-start timeline-nodes">
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-                  <h3 class="">December 2012 Enter The Dark Days </h3>
+                  <h3 class="">December 2012 <br/>Enter The Dark Days </h3>
                   <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -265,7 +264,7 @@
               </div>
               <div class="row no-gutters justify-content-end justify-content-md-around align-items-start timeline-nodes">
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-                  <h3 class="">february 2014 Our Triumph </h3>
+                  <h3 class="">february 2014<br/> Our Triumph </h3>
                   <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
