--- a/html-1/dreams.html
+++ b/html-1/dreams.html
@@ -12,6 +12,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
     $(document).ready(function() {
+       if ($(window).width() < 1024) {
+          $('.jqremove').removeClass("col-6");
+        } else {
+          $('.jqremove').addClass("col-6");
+        }
+      $(window).resize(function() {
+        if ($(window).width() < 1024) {
+          $('.jqremove').removeClass("col-6");
+        } else {
+          $('.jqremove').addClass("col-6");
+        }
+      });
       $(document).ready(function() {
         var scroll_start = 0;
         var startchange = $('#headerPosition');
@@ -30,6 +42,7 @@
                 // $(".fixed-nav-bar").css('height', '80px');
               }
             } else {
+
               if ((width > 768)) {
                 $('.fixed-nav-bar').css('background-color', 'transparent');
               } else {
@@ -41,7 +54,6 @@
         }
       });
     });
-
   </script>
   <style>
   </style>
@@ -55,7 +67,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div  style="" class="collapse navbar-collapse navbarPadding" id="navbarSupportedContent">
+    <div style="" class="collapse navbar-collapse navbarPadding" id="navbarSupportedContent">
       <div id="asd">
         <ul class="navbar-nav navbar-dark ml-auto " id="header">
           <li class="nav-item active">
@@ -110,8 +122,7 @@
           <h2>Beautiful Designs</h2>
           <p>Proin iaculis consequat sem digni ssim. Donec porttitora entum aenean rhoncus posuere odio in. Iaculis purus digni. </p>
         </div>
-        <div class="col-sm" id="midpic" style="padding-left: 100px;padding-right: 100px;
- "> <a href=""><img src="img/flow-tree.png" alt=""></a>
+        <div class="col-sm" id="midpic" style=""> <a href=""><img src="img/flow-tree.png" alt=""></a>
           <h2>web development</h2>
           <p>Proin iaculis consequat sem digni ssim. Donec porttitora entum aenean rhoncus posuere odio in. Iaculis purus digni. </p>
         </div>
@@ -130,20 +141,20 @@
           <p class="text2" style=" ">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt consequat sem cure digni ssim. </p>
           <div class="container">
             <div class="row expert">
-              <div class="col-6 "><img style="" src="img/Gear%20Icon.png" alt="">
+              <div class="col-6 jqremove"><img style="" src="img/Gear%20Icon.png" alt="">
                 <h2>Custom setup</h2>
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus.</p>
               </div>
-              <div class="col-6 "><img src="img/Cloud%20Icon.png" alt="">
+              <div class="col-6 jqremove"><img src="img/Cloud%20Icon.png" alt="">
                 <h2>Cloud control</h2>
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus.</p>
               </div> <!-- Force next columns to break to new line -->
               <div class="w-100"></div>
-              <div class="col-6 "><img src="img/Star%20Icon.png" alt="">
+              <div class="col-6 jqremove"><img src="img/Star%20Icon.png" alt="">
                 <h2>All star support team</h2>
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus.</p>
               </div>
-              <div class="col-6 "><img src="img/Lock%20Icon.png" alt="">
+              <div class="col-6 jqremove"><img src="img/Lock%20Icon.png" alt="">
                 <h2>top notch security</h2>
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus.</p>
               </div>
@@ -158,7 +169,7 @@
   <div id="amazingPosition">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-6 text0" style=" ">
+        <div class="col-md-6 text0" style="background-image:url(img/Background.png);background-repeat:no-repeat; background-position: right center;">
           <h1>Amazing Portfolio</h1>
           <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit. <br> <br> <br> Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat.</p>
           <div class="container" style="padding-left: 0px;">
@@ -231,7 +242,7 @@
             <div class="timeline">
               <div class="row no-gutters justify-content-end justify-content-md-around align-items-start timeline-nodes">
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-                  <h3 class=" ">July 2010 <br/>Our Humble Beginnings </h3>
+                  <h3 class=" ">July 2010 <br />Our Humble Beginnings </h3>
                   <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -242,7 +253,7 @@
               </div>
               <div class="row no-gutters justify-content-end justify-content-md-around align-items-start timeline-nodes">
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-                  <h3 class="">January 2011<br/> Facing Startup Battles </h3>
+                  <h3 class="">January 2011<br /> Facing Startup Battles </h3>
                   <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -253,7 +264,7 @@
               </div>
               <div class="row no-gutters justify-content-end justify-content-md-around align-items-start timeline-nodes">
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-                  <h3 class="">December 2012 <br/>Enter The Dark Days </h3>
+                  <h3 class="">December 2012 <br />Enter The Dark Days </h3>
                   <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
@@ -264,7 +275,7 @@
               </div>
               <div class="row no-gutters justify-content-end justify-content-md-around align-items-start timeline-nodes">
                 <div class="col-10 col-md-5 order-3 order-md-1 timeline-content">
-                  <h3 class="">february 2014<br/> Our Triumph </h3>
+                  <h3 class="">february 2014<br /> Our Triumph </h3>
                   <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
                 </div>
                 <div class="col-2 col-sm-1 px-md-3 order-2 timeline-image text-md-center">
