--- a/html-1/dreams.html
+++ b/html-1/dreams.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <title>Dream</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -177,21 +177,21 @@
               <div class="col-md-1"><img src="img/Gear%20Icon%20(1).png" alt=""></div>
               <div class="col-md-11">
                 <h2>Sail away your worries</h2>
-                <p>adad adsad e digni ssim. Donec porttitora entum suscipit aenean rhoncus po</p>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
               </div>
             </div>
             <div class="row no-gutters">
               <div class="col-md-1"><img src="img/Star%20Icon%20(1).png" alt=""></div>
               <div class="col-md-11">
                 <h2>All-star support team</h2>
-                <p>adad adsad e digni ssim. Donec porttitora entum suscipit aenean rhoncus po</p>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
               </div>
             </div>
             <div class="row no-gutters">
               <div class="col-md-1"><img src="img/Pie%20Icon.png" alt=""></div>
               <div class="col-md-11">
                 <h2>fully Integrated service</h2>
-                <p>adad adsad e digni ssim. Donec porttitora entum suscipit aenean rhoncus po</p>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. </p>
               </div>
             </div>
           </div>
@@ -343,7 +343,7 @@
                 <p>(416) 555-0000</p>
               </div>
               <div class="col-md-6"><img src="img/Mail-Icon.png" alt="">
-                <p>@dreams</p>
+                <p>hello@dreams.com</p>
               </div>
             </div>
             <div class="row smallRows">
@@ -369,17 +369,13 @@
             <div class="form-group"> <input type="email" class="form-control" placeholder="Your Name *" style=" height: 50px;" id="exampleInputEmail1" /> </div>
             <div class="form-group"> <input type="text" class="form-control" placeholder="Your E-mail *" style="height: 50px;" id="exampleInputName" /> </div> <textarea class="form-control" style="height: 170px;" placeholder="Your Message *" rows="5" id="comment"></textarea> <button style="" type="submit" class="btn btn-primary"> SEND MESSAGE </button>
           </form>
+          
         </div>
+        <hr style="" id="lastLine">
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <col-md-12>
-          <div class="col-md-12"></div>
-        </col-md-12>
-      </div>
-    </div>
-    <hr id="lastLine">
+   
+    
     <p class="lastP" style="
  ">© 2014 Dreams By FreebiesXpress</p>
   </div> <!-- Optional JavaScript -->
