--- a/html-1/dreams.html
+++ b/html-1/dreams.html
@@ -169,7 +169,7 @@
   <div id="amazingPosition">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-6 text0" style="background-image:url(img/Background.png);background-repeat:no-repeat; background-position: right center;">
+        <div class="col-md-6 text0" style="background-image:url(img/Background.png);background-repeat:no-repeat; background-position: right  center;">
           <h1>Amazing Portfolio</h1>
           <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit. <br> <br> <br> Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat.</p>
           <div class="container" style="padding-left: 0px;">
@@ -371,7 +371,7 @@
           </form>
           
         </div>
-        <hr style="" id="lastLine">
+        <hr align="lefts" id="lastLine">
       </div>
     </div>
    
