--- a/html-1/dreams.html
+++ b/html-1/dreams.html
@@ -12,11 +12,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
     $(document).ready(function() {
-       if ($(window).width() < 1024) {
-          $('.jqremove').removeClass("col-6");
-        } else {
-          $('.jqremove').addClass("col-6");
-        }
+      if ($(window).width() < 1024) {
+        $('.jqremove').removeClass("col-6");
+      } else {
+        $('.jqremove').addClass("col-6");
+      }
       $(window).resize(function() {
         if ($(window).width() < 1024) {
           $('.jqremove').removeClass("col-6");
@@ -54,43 +54,47 @@
         }
       });
     });
+
   </script>
   <style>
   </style>
 </head>
 
 <body>
-  <nav style="" class="navbar navbar-expand-lg navbar-dark sticky-top fixed-nav-bar">
-    <a class="navbar-brand" id="header" href="#">
-      <h2>Dreams</h2>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div style="" class="collapse navbar-collapse navbarPadding" id="navbarSupportedContent">
-      <div id="asd">
-        <ul class="navbar-nav navbar-dark ml-auto " id="header">
-          <li class="nav-item active">
-            <a class="nav-link" href="#headerPosition">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#servicesPosition">Services <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#amazingPosition">Portfolio <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#aboutPosition">About <span class="sr-only">(current)</span></a>
-          </li>
-          <div id="s">
+  <nav style="" class="navbar navbar-expand-md  navbar-dark sticky-top fixed-nav-bar ">
+
+    <div class="container">
+      <a class="navbar-brand " id="header" href="#">
+        <h2>Dreams</h2>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div style="" class="collapse navbar-collapse navbarPadding" id="navbarSupportedContent">
+        <div id="asd">
+          <ul class="navbar-nav navbar-dark mr-auto " id="header">
             <li class="nav-item active">
-              <a class="nav-link" href="#team">Team <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#headerPosition">Home <span class="sr-only">(current)</span></a>
             </li>
-          </div>
-          <li class="nav-item active">
-            <a class="nav-link" href="#footer">Contact <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
+            <li class="nav-item active">
+              <a class="nav-link" href="#servicesPosition">Services <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#amazingPosition">Portfolio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#aboutPosition">About <span class="sr-only">(current)</span></a>
+            </li>
+            <div id="s">
+              <li class="nav-item active">
+                <a class="nav-link" href="#team">Team <span class="sr-only">(current)</span></a>
+              </li>
+            </div>
+            <li class="nav-item active">
+              <a class="nav-link" href="#footer">Contact <span class="sr-only">(current)</span></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
@@ -134,23 +138,23 @@
     </div>
   </div>
   <div id="otherExpertPosition">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-md-8 " style="background-color: #f7f7f7;">
           <h1 class="text1" style=" ">OTHER EXPERTISE</h1>
           <p class="text2" style=" ">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt consequat sem cure digni ssim. </p>
           <div class="container">
             <div class="row expert">
-              <div class="col-6 jqremove"><img style="" src="img/Gear%20Icon.png" alt="">
+              <div class="col-6 p-0 jqremove"><img style="" src="img/Gear%20Icon.png" alt="">
                 <h2>Custom setup</h2>
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus.</p>
               </div>
-              <div class="col-6 jqremove"><img src="img/Cloud%20Icon.png" alt="">
+              <div class="col-6  jqremove"><img src="img/Cloud%20Icon.png" alt="">
                 <h2>Cloud control</h2>
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus.</p>
               </div> <!-- Force next columns to break to new line -->
               <div class="w-100"></div>
-              <div class="col-6 jqremove"><img src="img/Star%20Icon.png" alt="">
+              <div class="col-6 p-0 jqremove"><img src="img/Star%20Icon.png" alt="">
                 <h2>All star support team</h2>
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus.</p>
               </div>
@@ -162,12 +166,16 @@
           </div> <button class="ebutton" style=" " type="submit"> LEARN MORE </button>
         </div>
         <div class="col-md-4" style="background-color: #f7f7f7;background-image:url(img/Image.png);background-repeat:no-repeat;background-position: right;
+          -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;    
  "></div>
       </div>
     </div>
   </div>
   <div id="amazingPosition">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <div class="col-md-6 text0" style="background-image:url(img/Background.png);background-repeat:no-repeat; background-position: right  center;">
           <h1>Amazing Portfolio</h1>
@@ -202,7 +210,7 @@
     </div>
   </div>
   <div id="galleryPosition">
-    <div class="container-fluid" id="g">
+    <div class="container" id="g">
       <div class="row no-gutters ">
         <div class="col-md-4">
           <div class="thumbnail"> <a href=""><img src="img/1.png" alt=""></a> </div>
@@ -332,7 +340,7 @@
     </div>
   </div>
   <div id="footer" style="background-color: #111111;">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row info" style="">
         <div class="col-md-6">
           <h3> Contact Us </h3>
@@ -369,13 +377,11 @@
             <div class="form-group"> <input type="email" class="form-control" placeholder="Your Name *" style=" height: 50px;" id="exampleInputEmail1" /> </div>
             <div class="form-group"> <input type="text" class="form-control" placeholder="Your E-mail *" style="height: 50px;" id="exampleInputName" /> </div> <textarea class="form-control" style="height: 170px;" placeholder="Your Message *" rows="5" id="comment"></textarea> <button style="" type="submit" class="btn btn-primary"> SEND MESSAGE </button>
           </form>
-          
+
         </div>
         <hr align="lefts" id="lastLine">
       </div>
     </div>
-   
-    
     <p class="lastP" style="
  ">© 2014 Dreams By FreebiesXpress</p>
   </div> <!-- Optional JavaScript -->
