--- a/html-1/dreams.html
+++ b/html-1/dreams.html
@@ -124,7 +124,8 @@
       <div class="row ">
         <div class="col-sm"> <a href=""><img src="img/tools.png" alt=""></a>
           <h2>Beautiful Designs</h2>
-          <p>Proin iaculis consequat sem digni ssim. Donec porttitora entum aenean rhoncus posuere odio in. Iaculis purus digni. </p>
+          <p>Proin iaculis consequat sem digni ssim.
+           Donec porttitora entum aenean rhoncus posuere odio in. Iaculis purus digni. </p>
         </div>
         <div class="col-sm" id="midpic" style=""> <a href=""><img src="img/flow-tree.png" alt=""></a>
           <h2>web development</h2>
@@ -177,7 +178,7 @@
   <div id="amazingPosition">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 text0" style="background-image:url(img/Background.png);background-repeat:no-repeat; background-position: right  center;">
+        <div class="col-md-6 text0" style="background-image:url(img/Background.png);background-repeat:no-repeat; background-position: top 43% center; background-size: contain;">
           <h1>Amazing Portfolio</h1>
           <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit. <br> <br> <br> Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat.</p>
           <div class="container" style="padding-left: 0px;">
@@ -204,7 +205,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6" style="background-image:url(img/border.png);background-repeat:no-repeat;background-position: right;
+        <div class="col-md-6" style="background-image:url(img/border.png);background-repeat:no-repeat;background-position: left  center ; background-size: contain; 
  "></div>
       </div>
     </div>
