black small navbar when scroll

--- a/html-1/dreams.html
+++ b/html-1/dreams.html
@@ -33,14 +33,10 @@
             scroll_start = $(this).scrollTop();
             var width = $(window).width();
             if (scroll_start > offset.top && (width >= 768)) {
-              $(".fixed-nav-bar").css('background-color', 'rgba(0, 0, 0, 0.6)');
+              $(".fixed-nav-bar").css('background-color', 'black');
               var width = $(window).width();
               var height = $(window).height();
-              if ((width <= 768)) {
-                //    $(".fixed-nav-bar").css('height', '260px');
-              } else {
-                // $(".fixed-nav-bar").css('height', '80px');
-              }
+           
             } else {
 
               if ((width > 768)) {
@@ -125,7 +121,7 @@
         <div class="col-sm"> <a href=""><img src="img/tools.png" alt=""></a>
           <h2>Beautiful Designs</h2>
           <p>Proin iaculis consequat sem digni ssim.
-           Donec porttitora entum aenean rhoncus posuere odio in. Iaculis purus digni. </p>
+            Donec porttitora entum aenean rhoncus posuere odio in. Iaculis purus digni. </p>
         </div>
         <div class="col-sm" id="midpic" style=""> <a href=""><img src="img/flow-tree.png" alt=""></a>
           <h2>web development</h2>
